--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,11 @@ cache:
   directories:
   - "$HOME/.m2/repository"
 services: mongodb
-#before_install:
-#  - pip install --user codecov    #Install codecov
+before_install:
+  - pip install --user codecov    #Install codecov
   -
 after_success:
-#  - codecov
+  - codecov
   - bash <(curl -s https://codecov.io/bash)
 #  - bash <(curl -s https://codecov.io/bash) -t 73275810-fabf-48f1-b7ee-201f216557b1
 #  - export CODECOV_TOKEN="73275810-fabf-48f1-b7ee-201f216557b1"
