--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,14 @@ cache:
   directories:
   - "$HOME/.m2/repository"
 services: mongodb
-env:
-  global:
-    - CODECOV_TOKEN=:a5a0d1ea-f898-47a5-995a-96325469845d
-before_install:
-  - pip install --user codecov    #Install codecov
+#env:
+#  global:
+#    - CODECOV_TOKEN=:a5a0d1ea-f898-47a5-995a-96325469845d
+#before_install:
+#  - pip install --user codecov    #Install codecov
   -
 after_success:
-  - codecov
+#  - codecov
   - export CODECOV_TOKEN="a5a0d1ea-f898-47a5-995a-96325469845d"
   - bash <(curl -s https://codecov.io/bash)
 #  - bash <(curl -s https://codecov.io/bash) -t 73275810-fabf-48f1-b7ee-201f216557b1
