--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,22 @@ services: mongodb
 #    - CODECOV_TOKEN=:a5a0d1ea-f898-47a5-995a-96325469845d
 #before_install:
 #  - pip install --user codecov    #Install codecov
-  -
+
+before_install:
+  #   Install Kafka
+  #  - wget http://www.us.apache.org/dist/kafka/0.8.2.1/kafka_2.10-0.8.2.1.tgz -O kafka.tgz
+  - wget http://mirrors.estointernet.in/apache/kafka/2.1.1/kafka_2.11-2.1.1.tgz -O kafka.tgz
+  - mkdir -p kafka && tar xzf kafka.tgz -C kafka --strip-components 1
+  - cd kafka
+  # Run Zookeeper/Kafka on localhost (default ports for ZK, Kafka: 2181, 9092)
+  - bin/zookeeper-server-start.sh config/zookeeper.properties &
+  #  - sleep 5
+  - bin/kafka-server-start.sh config/server.properties &
+  #  - sleep 5
+  # Create 'scholars' topic with 3 partitions
+  - cd ../
 after_success:
 #  - codecov
   - export CODECOV_TOKEN="a5a0d1ea-f898-47a5-995a-96325469845d"
   - bash <(curl -s https://codecov.io/bash)
+
