--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,12 @@ before_install:
   - cd ../
 after_success:
 #  - codecov
+  - cd kafka
+  - bin/kafka-server-stop.sh
+  - bin/zookeeper-server-stop.sh
+  - cd ../
+  - rm -rf kafka
   - export CODECOV_TOKEN="a5a0d1ea-f898-47a5-995a-96325469845d"
   - bash <(curl -s https://codecov.io/bash)
-  - ls
+
 
