--- a/.travis.yml
+++ b/.travis.yml
@@ -18,16 +18,18 @@ before_install:
   - cd kafka
   # Run Zookeeper/Kafka on localhost (default ports for ZK, Kafka: 2181, 9092)
   - bin/zookeeper-server-start.sh config/zookeeper.properties &
-  #  - sleep 5
+  - sleep 5
   - bin/kafka-server-start.sh config/server.properties &
-  #  - sleep 5
+  - sleep 5
   # Create 'scholars' topic with 3 partitions
   - cd ../
 after_success:
 #  - codecov
   - cd kafka
   - bin/kafka-server-stop.sh
+  - sleep 5
   - bin/zookeeper-server-stop.sh
+  - sleep 5
   - cd ../
   - rm -rf kafka
   - export CODECOV_TOKEN="a5a0d1ea-f898-47a5-995a-96325469845d"
